# manim_prerecorded

./: .gitignore  README.md  main.py  manim_recorded_demo.py  pyproject.toml
src/manim_voiceover_recorded/: __init__.py  recorded.py
