[project]
name = "manim-prerecorded"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim-voiceover[azure,gtts,recorder]>=0.3.7",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
