[project]
name = "manim-prerecorded"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "build>=1.2.2.post1",
    "fuzzy>=1.2.2",
    "fuzzywuzzy[speedup]>=0.18.0",
    "gtts>=2.5.4",
    "jellyfish>=1.2.0",
    "librosa>=0.11.0",
    "manim-voiceover[azure,gtts,recorder]>=0.3.7",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "requests>=2.32.3",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "whisper>=1.1.10",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
